# Kyber

./: .gitattributes  .gitignore  .gitmodules  BUILDING.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  STANDARDS.md  patch-submodules.ps1  pubspec.yaml
API/: .gitignore  Dockerfile  go.mod  go.sum
CLI/: .gitignore  analysis_options.yaml  flutter_rust_bridge.yaml  pubspec.yaml
CLI/rust/: .gitignore  Cargo.toml  rust-toolchain.toml
CLI/rust/src/: lib.rs
CLI/rust/src/api/: archive.rs  maxima.rs  mod.rs  ping.rs
Launcher/rust/: Cargo.toml  rust-toolchain.toml
Launcher/rust/src/: lib.rs
Launcher/rust/src/api/: archive.rs  downloader.rs  maxima.rs  mod.rs
Module/: .bazelrc  .gitignore  BUILD.bazel  BUILDING.md  MODULE.bazel  build.bat  pushmodulelocal.sh  pushserverlocal.sh
Module/Docker/: entrypoint.sh
Module/Proto/: kyber_api.proto  kyber_common.proto  kyber_ea_bridge.proto  kyber_interface.proto  mod_bridge.proto
Module/Public/Base/: Log.h  Logo.h  Pch.h  Platform.h  Version.h
Module/Public/Core/: Client.h  Console.h  DebugHooks.h  Event.h  EventManager.h  Memory.h  Program.h  Sentry.h  Server.h  Settings.h  ThreadExecutor.h
Module/Public/Entity/: KyberSettings.h  NativeEntityManager.h
Module/Public/Entity/Entities/: KyberCompareLocalizedStringEntity.h  KyberCurrentTimeEntity.h  KyberFakeChatEntity.h  KyberOpenWebsiteEntity.h  KyberTestEntity.h  KyberTimeSplitterEntity.h
Module/Public/Entity/Overrides/: ConsoleCommandTriggerEntity.h  LocalizedStringIdPickerEntity.h  PrintDebugTextEntity.h  PropertyDebugEntity.h  ReleaseVersionEntity.h  TestCaseEntity.h  WSPrintDebugTextEntity.h
Module/Public/Hook/: Hook.h  HookManager.h
Module/Public/Misc/: EventSyncListener.h  ServerSpawnListener.h
Module/Public/ModLoader/: BundleMerger.h  CustomAssetHandler.h  DbObject.h  KyberMod.h  LiveEditManager.h  ManifestMerger.h  ModLoader.h  ResourceMerger.h
Module/Public/ModLoader/Handlers/: LocalizationHandler.h  MeshVariationHandler.h  NetworkRegistryHandler.h  ProfileOptionsHandler.h  UIMetaDataHandler.h  WSTeamDataHandler.h
Module/Public/Network/: SafeQueue.h  SocketCreator.h  SocketManager.h  UDPSocket.h  WebSocket.h
Module/Public/Persistence/: PersistenceDatabase.h  PersistenceManager.h
Module/Public/RPC/: API.h  AsyncRPCManager.h  InterfaceService.h
Module/Public/RPC/API/: ClientServer.h  Launcher.h  Proxy.h  ServerBrowser.h  ServerManagement.h  Statistics.h  Voip.h
Module/Public/RPC/Interface/: ClientState.h  Common.h  ServerState.h
Module/Public/SDK/: Debug.h  Funcs.h  SDK.h  Transform.h  TypeInfo.h  Types.h
Module/Public/Script/: Lua.h  LuaClientEvents.h  LuaConsole.h  LuaDataContainer.h  LuaEntityManager.h  LuaEventManager.h  LuaGlobals.h  LuaHookManager.h  LuaPlayerManager.h  LuaResourceManager.h  LuaSocketManager.h  LuaUtilFunctions.h  ScriptManager.h
Module/Public/Utilities/: ErrorUtils.h  MemoryUtils.h  PlatformUtils.h  StringUtils.h  ThreadPool.h
Module/Public/Voip/: VoipManager.h
Module/Public/Voip/UI/: KyberVoipCaptureDevicesEntity.h  KyberVoipPlayerStatusEntity.h  KyberVoipSettingsEntity.h
Module/Source/Core/: Client.cpp  Console.cpp  DebugHooks.cpp  EventManager.cpp  Main.cpp  Memory.cpp  Program.cpp  Sentry.cpp  Server.cpp  Settings.cpp  ThreadExecutor.cpp
Module/Source/Entity/: KyberSettings.cpp  NativeEntityManager.cpp
Module/Source/Entity/Entities/: KyberCompareLocalizedStringEntity.cpp  KyberCurrentTimeEntity.cpp  KyberFakeChatEntity.cpp  KyberOpenWebsiteEntity.cpp  KyberTestEntity.cpp  KyberTimeSplitterEntity.cpp
Module/Source/Entity/Overrides/: ConsoleCommandTriggerEntity.cpp  LocalizedStringIdPickerEntity.cpp  PrintDebugTextEntity.cpp  PropertyDebugEntity.cpp  ReleaseVersionEntity.cpp  TestCaseEntity.cpp  WSPrintDebugTextEntity.cpp
Module/Source/Hook/: Hook.cpp  HookManager.cpp
Module/Source/Misc/: CameraManager.cpp  EventSyncListener.cpp  LatencyDisplay.cpp  ServerSpawnListener.cpp
Module/Source/ModLoader/: BundleMerger.cpp  CustomAssetHandler.cpp  DbObject.cpp  EnlightenShaderDatabase.hexpat  LiveEditManager.cpp  ManifestMerger.cpp  ModLoader.cpp  ResourceMerger.cpp  ShaderBlockDepot.hexpat  ShaderBlockDepotDirect.hexpat
Module/Source/ModLoader/Handlers/: LocalizationHandler.cpp  MeshVariationHandler.cpp  NetworkRegistryHandler.cpp  ProfileOptionsHandler.cpp  UIMetaDataHandler.cpp  WSTeamDataHandler.cpp
Module/Source/Network/: SocketManager.cpp  UDPSocket.cpp  WebSocket.cpp
Module/Source/Persistence/: PersistenceDatabase.cpp  PersistenceManager.cpp
Module/Source/RPC/: API.cpp  AsyncRPCManager.cpp  InterfaceService.cpp
Module/Source/RPC/API/: ClientServer.cpp  Launcher.cpp  Proxy.cpp  ServerBrowser.cpp  ServerManagement.cpp  Statistics.cpp  Voip.cpp
Module/Source/RPC/Interface/: ClientState.cpp  Common.cpp  ServerState.cpp
Module/Source/SDK/: SDK.cpp  TypeInfo.cpp
Module/Source/Script/: Lua.cpp  LuaClientEvents.cpp  LuaConsole.cpp  LuaDataContainer.cpp  LuaEntityManager.cpp  LuaEventManager.cpp  LuaGlobals.cpp  LuaHookManager.cpp  LuaPlayerManager.cpp  LuaResourceManager.cpp  LuaSocketManager.cpp  LuaUtilFunctions.cpp  README.md  ScriptManager.cpp
Module/Source/Utilities/: ErrorUtils.cpp  MemoryUtils.cpp  PlatformUtils.cpp  StringUtils.cpp  ThreadPool.cpp
Module/Source/Voip/: VoipManager.cpp
Module/Source/Voip/UI/: KyberVoipCaptureDevicesEntity.cpp  KyberVoipPlayerStatusEntity.cpp  KyberVoipSettingsEntity.cpp
Module/clangd/: BUILD.bazel  refresh.bat
Proxy/: .gitignore  Cargo.toml  Dockerfile  build.rs
Proxy/src/: grpc_client.rs  jwks.rs  main.rs  user_manager.rs  utils.rs
(+451 files in other folders)
