# May need to define _SILENCE_CXX17_CODECVT_HEADER_DEPRECATION_WARNING and EASTL_CUSTOM_FLOAT_CONSTANTS_REQUIRED
# Working without for now

load("@grpc//bazel:grpc_build_system.bzl", "grpc_proto_library")

grpc_proto_library(
    name = "KyberCommonProto",
    srcs = ["Proto/kyber_common.proto"],
)

grpc_proto_library(
    name = "KyberAPIProto",
    srcs = ["Proto/kyber_api.proto"],
    deps = [":KyberCommonProto"],
)

grpc_proto_library(
    name = "KyberInterfaceProto",
    srcs = ["Proto/kyber_interface.proto"],
    deps = [":KyberCommonProto", ":KyberAPIProto"],
)

cc_binary(
    name = "Kyber",
    srcs = glob(["Source/**/*.cpp"]),
    includes = [
        "Public",
    ],
    linkopts = [
        "d3d11.lib",
        "Ws2_32.lib",
        "dxgi.lib",
        "rpcrt4.lib",
        "winmm.lib",
        "version.lib",
        "Ole32.lib",
        "crypt32.lib",
        "User32.lib",
        "Shell32.lib",
    ],
    linkshared = 1,
    deps = [
        ":KyberAPIProto",
        ":KyberInterfaceProto",
        "//ThirdParty/EASTL/EASTLArena",
        "//ThirdParty/EASTL",
        "//ThirdParty/ByteBuffer",
        "@fb_runtime_tweaker//:FBRuntimeTweaker",
        "//ThirdParty/glm",
        "//ThirdParty/IXWebSocket",
        "//ThirdParty/FastDelegate",
        "//ThirdParty/json",
        "//ThirdParty/vivox",
        "//ThirdParty/sentry",
        "//ThirdParty/lua",
        "//ThirdParty/safetyhook",
        "@grpc//:grpc++",
        "//ThirdParty/ToolLib",
        "//ThirdParty/zip",
    ],
)
