[package]
name = "kyber_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
mini-redis = "0.4.1"
tonic = "0.10.2"
rand = "0.8.5"
prost = "0.12"
log = "0.4.2"
env_logger = "0.11.3"
dashmap = "5.5.3"
tokio-tungstenite = "0.21.0"
futures-util = "0.3.30"
sentry = "0.45.0"
jsonwebtoken = "9.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
percent-encoding = "2.3"
reqwest = { version = "0.11", features = ["json"] }

[build-dependencies]
tonic-build = "0.10.2"

[[bin]]
name = "kyber_proxy"
path = "src/main.rs"
