[package]
name = "rust_lib"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
tokio = { version = "1.28.2", features = ["full", "rt", "rt-multi-thread", "time", "net"] }
log = "0.4.20"
maxima-lib = { path = "../ThirdParty/Maxima/maxima-lib" }
lazy_static = "1.4.0"
ping = "0.5.2"
regex = { version = "1.10.2", features = [] }
anyhow = "1.0.79"
serde = { version = "1.0.195", features = ["derive"] }
zip = { version = "=2.4.2", features = ["deflate"], default-features = false }
serde_json = "1.0.1"
flutter_logger = "0.6.1"
reqwest = { version = "0.11.18", features = ["stream", "rustls-tls"], default-features = false }

[patch.crates-io]
flate2 = { git = 'https://github.com/ArmchairDevelopers/flate2-rs.git' }
async-compression = { git = 'https://github.com/ArmchairDevelopers/async-compression.git' }
dll-syringe = { git = 'https://github.com/Davenport-Physics/dll-syringe.git' }
