[package]
name = "rust_lib"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = { version = "=2.11.1", default-features = false, features = ["anyhow", "user-utils", "dart-opaque", "backtrace", "thread-pool", "rust-async", "uuid"] }
tokio = { version = "1.36.0", features = ["full", "rt", "rt-multi-thread", "time", "net"] }
tokio-util = "0.7"
log = "0.4.20"
maxima-lib = { path = "../../ThirdParty/Maxima/maxima-lib" }
lazy_static = "1.4.0"
regex = { version = "1.10.2", features = [] }
anyhow = "1.0.79"
flutter_logger = "0.6.1"
tar = "0.4.43"
zip = { version = "=2.4.2", features = ["deflate"], default-features = false }

[patch.crates-io]
pelite = { git = 'https://github.com/lifegpc/pelite.git' }
async-compression = { git = 'https://github.com/ArmchairDevelopers/async-compression.git' }
flate2 = { git = 'https://github.com/ArmchairDevelopers/flate2-rs.git' }
