load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")


load("@grpc//bazel:grpc_build_system.bzl", "grpc_proto_library")

grpc_proto_library(
    name = "KyberCommonProto",
    srcs = ["Proto/kyber_common.proto"],
)

grpc_proto_library(
    name = "KyberAPIProto",
    srcs = ["Proto/kyber_api.proto"],
    deps = [":KyberCommonProto"],
)

grpc_proto_library(
    name = "KyberInterfaceProto",
    srcs = ["Proto/kyber_interface.proto"],
    deps = [":KyberCommonProto", ":KyberAPIProto"],
)

refresh_compile_commands(
    name = "refresh_compile_commands",

    targets = {
        ":KyberAPIProto": "",
        ":KyberInterfaceProto": "",
        "//ThirdParty/EASTL/EASTLArena": "",
        "//ThirdParty/EASTL": "",
        "//ThirdParty/ByteBuffer": "",
        "@fb_runtime_tweaker//:FBRuntimeTweaker": "",
        "//ThirdParty/glm": "",
        "//ThirdParty/IXWebSocket": "",
        "//ThirdParty/FastDelegate": "",
        "//ThirdParty/json": "",
        "//ThirdParty/vivox": "",
        "//ThirdParty/sentry": "",
        "//ThirdParty/lua": "",
        "//ThirdParty/safetyhook": "",
        "//ThirdParty/ToolLib": "",
        "//bazel-bin/Proto": "",
        "@grpc//:grpc++": "",
        "//:Kyber": "",
    },
)
